--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ body {
 
 .personal-info__avatar {
   border-radius: 50%;
-  border: 6px solid antiquewhite;
+  border: 2px solid black;
 }
 .personal-info__content {
 }
